# Flint

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  flint.desktop
.github/workflows/: build-release.yml
src/: main.cpp
src/accounts/: accounts.cpp  accounts.hpp  microsoft_auth.cpp  microsoft_auth.hpp
src/downloads/: download_manager.cpp  download_manager.hpp
src/filesystem/: filesystem.cpp  filesystem.hpp
src/java/: java_manager.cpp  java_manager.hpp
src/logging/: logging.cpp  logging.hpp
src/minecraft/: instances.cpp  instances.hpp  minecraft.cpp  minecraft.hpp
src/network/: network.cpp  network.hpp
src/ui/: mainwindow.cpp  mainwindow.hpp  microsoft_login_dialog.cpp  microsoft_login_dialog.hpp  mod_manager_dialog.cpp  mod_manager_dialog.hpp
